# ValaGStreamerApplication

./: Makefile  Makefile.am  Makefile.in  videoview.vala
